// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > UDS: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 0,
    "items": [],
    "passing": 0,
    "totalSelectedContributionUp": 0,
  },
  "failingItems": [
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 4,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": null,
      "description": "Supermercado Nacional: 254 uds vs 109 uds en el mismo período del año anterior (+133.0%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 310,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Supermercado Nacional",
      "metricId": "venta",
      "rank": 10,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↑ Supermercado Nacional — cambio en Venta",
    },
    {
      "accion": null,
      "description": "Pulpería San José muestra una tendencia creciente en Ventas por cliente en los últimos 3 meses (206 → 508, +146.2%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 143,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Pulpería San José",
      "metricId": "ventas_por_cliente",
      "rank": 11,
      "scoreRounded": 0.8189,
      "severity": "CRITICA",
      "title": "📈 Pulpería San José — tendencia creciente",
    },
  ],
  "failsByMetricAndRule": {
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "venta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "ventas_por_cliente": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
  },
  "failsByRule": {
    "materiality": 3,
    "monetaryCoherence": 0,
    "narrativeCoherence": 2,
    "pareto": 3,
  },
  "failsByTypeAndRule": {
    "change": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "trend": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
  },
  "gateFailCount": 3,
  "gatePassCount": 8,
  "gateRescuedByContributionUpException": 0,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 11,
  "usdSourceDistributionInR3Fails": {},
}
`;

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > USD: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 0,
    "items": [
      {
        "accionPresent": false,
        "dimensionId": "vendedor",
        "failedRules": [],
        "impactoUsdRounded": 1210,
        "impactoUsdSource": "recuperable",
        "meetsAllProposed": true,
        "meetsImpactoMin1pct": true,
        "meetsScore095": true,
        "meetsSeverityHigh": true,
        "member": "María Castillo",
        "metricId": "venta",
        "passes": true,
        "scoreRounded": 1,
        "severity": "CRITICA",
        "usdShareOfBusinessPct": 3.09,
      },
    ],
    "passing": 1,
    "totalSelectedContributionUp": 1,
  },
  "failingItems": [
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 4,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": null,
      "description": "Supermercado Nacional: 254 uds vs 109 uds en el mismo período del año anterior (+133.0%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 310,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Supermercado Nacional",
      "metricId": "unidades",
      "rank": 9,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↑ Supermercado Nacional — cambio en Unidades",
    },
    {
      "accion": null,
      "description": "Mercado Central: $2.10 vs $1.41 en el mismo período del año anterior (+49.0%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Mercado Central",
      "metricId": "precio_unitario",
      "rank": 10,
      "scoreRounded": 1,
      "severity": "MEDIA",
      "title": "↑ Mercado Central — cambio en Precio unitario",
    },
  ],
  "failsByMetricAndRule": {
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "precio_unitario": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "unidades": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
  },
  "failsByRule": {
    "materiality": 3,
    "monetaryCoherence": 0,
    "narrativeCoherence": 2,
    "pareto": 3,
  },
  "failsByTypeAndRule": {
    "change": {
      "materiality": 2,
      "monetaryCoherence": 0,
      "narrativeCoherence": 2,
      "pareto": 2,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
  },
  "gateFailCount": 3,
  "gatePassCount": 7,
  "gateRescuedByContributionUpException": 1,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 10,
  "usdSourceDistributionInR3Fails": {},
}
`;
